# rl_sar

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTORS.md  LICENCE  LICENSE  MODIFY.md  README.md  README_CN.md  README_GALLANT.md  build.sh  download_inference_runtime.sh  source.bash
src/rl_sar/: CMakeLists.txt  config.yaml  package.ros1.xml  package.ros2.xml  package.xml
src/rl_sar/fsm_robot/: fsm_a1.hpp  fsm_all.hpp  fsm_b2.hpp  fsm_b2w.hpp  fsm_g1.hpp  fsm_go2.hpp  fsm_go2w.hpp  fsm_gr1t1.hpp  fsm_gr1t2.hpp  fsm_l4w4.hpp  fsm_lite3.hpp  fsm_tita.hpp
src/rl_sar/include/: onnx_policy.hpp  pc_voxelizer.hpp  rl_real.hpp  rl_real_a1.hpp  rl_real_cyberdog.hpp  rl_real_g1.hpp  rl_real_go2.hpp  rl_real_go2w.hpp  rl_real_l4w4.hpp  rl_real_lite3.hpp  rl_sim.hpp  rl_sim_mujoco.hpp
src/rl_sar/launch/: gazebo.launch  gazebo.launch.py  gazebo_a1.launch  gazebo_a1_isaacgym.launch  gazebo_a1_isaaclab.launch  gazebo_a1_isaacsim.launch  gazebo_b2.launch  gazebo_b2w.launch  gazebo_g1.launch  gazebo_g1_12dof.launch  gazebo_g1_29dof.launch  gazebo_go2.launch  gazebo_go2_isaacgym.launch  gazebo_go2w.launch  gazebo_gr1t1.launch  gazebo_gr1t1_isaacgym.launch  gazebo_gr1t2.launch  gazebo_gr1t2_isaacgym.launch  gazebo_l4w4.launch  gazebo_openloong_isaacsim.launch  rviz.launch.py  start_a1.launch  start_cyberdog.launch  start_env.launch  visualization.rviz
src/rl_sar/models/: actor.pt  encoder.pt  vq_layer.pt
src/rl_sar/models/a1/: base.yaml  vq_layer.pt
src/rl_sar/models/a1_isaacgym/: config.yaml
src/rl_sar/models/a1_isaacsim/: config.yaml  policy.pt
src/rl_sar/models/b2/: base.yaml
src/rl_sar/models/b2w/: base.yaml
src/rl_sar/models/cyberdog1/: encoder.pt
src/rl_sar/models/g1/: base.yaml
src/rl_sar/models/go2_isaacgym/: config.yaml  himloco.pt  himloco_2.pt
src/rl_sar/models/gr1t1_isaacgym/: config.yaml
src/rl_sar/models/gr1t1_isaacsim/: config.yaml
src/rl_sar/models/gr1t2/: model_4000_jit.pt
src/rl_sar/models/gr1t2_isaacgym/: config.yaml
src/rl_sar/models/gr1t2_isaacsim/: config.yaml
src/rl_sar/models/l4w4/: base.yaml
src/rl_sar/models/openloong_isaacsim/: config.yaml  policy.pt  policy2.pt
src/rl_sar/policy/: fsm.hpp
src/rl_sar/policy/a1/: base.yaml  fsm.hpp
src/rl_sar/policy/b2/: base.yaml  fsm.hpp
src/rl_sar/policy/b2w/: base.yaml  fsm.hpp
src/rl_sar/policy/g1/: base.yaml  fsm.hpp
src/rl_sar/policy/go2/: base.yaml  fsm.hpp
src/rl_sar/policy/go2w/: base.yaml  fsm.hpp
src/rl_sar/policy/gr1t1/: base.yaml  fsm.hpp
src/rl_sar/policy/gr1t2/: base.yaml  fsm.hpp
src/rl_sar/policy/l4w4/: base.yaml  fsm.hpp
src/rl_sar/policy/lite3/: base.yaml  fsm.hpp
src/rl_sar/policy/m20/: base.yaml  check_yaml.py  fsm.hpp
src/rl_sar/policy/tita/: base.yaml  fsm.hpp
src/rl_sar/scripts/: actuator_net.py  convert_policy.py  init_cyberdog.sh  interactive_marker.py  kill_cyberdog.sh  object_visualizaer.py  observation_buffer.py  rl_sdk.py  rl_sim.py
src/rl_sar/src/: rl_real.cpp  rl_real_a1.cpp  rl_real_cyberdog.cpp  rl_real_g1.cpp  rl_real_go2.cpp  rl_real_go2w.cpp  rl_real_l4w4.cpp  rl_real_lite3.cpp  rl_sim.cpp  rl_sim_mujoco.cpp
src/rl_sar/test/: test_inference_stability.cpp  test_observation_buffer.cpp  test_vector_math.cpp
src/rl_sar/worlds/: bench.world  earth.world  stairs.world
src/robot_joint_controller/: CMakeLists.txt  package.ros1.xml  package.ros2.xml  robot_joint_controller_plugins.xml
src/robot_joint_controller/examples/launch/: group_gazebo.launch.py  single_gazebo.launch.py
src/robot_joint_controller/include/: robot_joint_controller.h  robot_joint_controller.hpp  robot_joint_controller_group.hpp
src/robot_joint_controller/ros/: robot_joint_controller_plugins.xml
src/robot_joint_controller/ros/include/: robot_joint_controller.h
src/robot_joint_controller/ros/src/: robot_joint_controller.cpp
src/robot_joint_controller/ros2/include/: robot_joint_controller.hpp  robot_joint_controller_group.hpp  visibility_control.h
src/robot_joint_controller/ros2/src/: robot_joint_controller.cpp  robot_joint_controller_group.cpp
src/robot_joint_controller/src/: robot_joint_controller.cpp  robot_joint_controller_group.cpp
src/robot_msgs/: CMakeLists.txt  package.ros1.xml  package.ros2.xml
src/robot_msgs/msg/: IMU.msg  MotorCommand.msg  MotorState.msg  RobotCommand.msg  RobotState.msg
src/robots/a1_description/: CMakeLists.txt  package.ros1.xml  package.ros2.xml  package.xml
src/robots/a1_description/config/: robot_control.yaml
src/robots/a1_description/config_ros2/: robot_control_group.yaml
src/robots/a1_description/launch/: a1_rviz.launch.py  check_joint.rviz  group_gazebo.launch.py  single_gazebo.launch.py
src/robots/a1_description/urdf/: a1.urdf  a1_description.urdf
src/robots/a1_description/xacro/: gazebo.xacro  gazebo_ros2.xacro  robot.xacro  ros2_control.xacro
src/robots/go2_description/: CMakeLists.txt  package.ros2.xml
src/robots/go2_description/config/: robot_control.yaml  robot_control_ros2.yaml
src/robots/go2_description/mjcf/: go2.xml  scene.xml  scene_terrain.xml
src/robots/go2_description/urdf/: go2_description.urdf
src/robots/go2_description/xacro/: gazebo.xacro  robot.xacro  robot_ros2.xacro  ros2_control.xacro
src/robots/gr1t2_description/: CMakeLists.txt  package.ros2.xml  package.xml
src/robots/gr1t2_description/config/: robot_control.yaml
src/robots/lite3_description/: CMakeLists.txt  package.ros1.xml  package.ros2.xml
src/unitree_rl/: CMakeLists.txt  package.xml
src/unitree_rl/include/: convert.h  unitree_rl.hpp  unitree_rl_real.hpp
src/unitree_rl/launch/: start_env.launch
src/unitree_rl/lib/: model.cpp  model.hpp  observation_buffer.hpp
src/unitree_rl/models/: actor.pt  encoder.pt  vq_layer.pt
src/unitree_rl/src/: unitree_rl.cpp  unitree_rl_real.cpp
src/unitree_rl/worlds/: stairs.world
src/velodyne_simulator/velodyne_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/velodyne_simulator/velodyne_gazebo_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/velodyne_simulator/velodyne_simulator/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+397 files in other folders)
